# FE522-Final-Project

./: .gitignore  CMakeLists.txt  F-F_Research_Data_5_Factors_2x3.csv  LinearRegression.cpp  LinearRegression.h  README.md  inputoutput.h  main.cpp  matrix.h  model_testdata  suggestedChanges.txt
InputOutput/: CMakeLists.txt  inputoutput.cpp  inputoutput.h  main.cpp
filehandler/: inputoutput.h
linearRegression/: LinearRegression.h
matrix/: matrix.h
test/: CMakeLists.txt  inputOutputTest.cpp  linearRegressionTest.cpp  matrixTest.cpp  sampleTest.csv  test.cpp
